Fixes accept/reject update to DB

--- a/OntoViewer/src/onto_app/templates/index.html
+++ b/OntoViewer/src/onto_app/templates/index.html
@@ -510,17 +510,17 @@
         {% if hiddenJSONRel %}
         <div class="hidden" id="hiddenJSONRel" value='{{ hiddenJSONRel }}'>{{ hiddenJSONRel|tojson|safe }}</div>
         {% else %}
-        <div class="hidden" id="hiddenJSONRel" value='{{ emptyList }}'>{{ emptyList|tojson|safe }}</div>
+        <div class="hidden" id="hiddenJSONRel" value='{{ emptyList }}'>{{ emptyList}}</div>
         {% endif %}
         {% if hiddenJSONNode %}
         <div class="hidden" id="hiddenJSONNode" value='{{ hiddenJSONNode }}'>{{ hiddenJSONNode|tojson|safe }}</div>
         {% else %}
-        <div class="hidden" id="hiddenJSONNode" value='{{ emptyList }}'>{{ emptyList|tojson|safe }}</div>
+        <div class="hidden" id="hiddenJSONNode" value='{{ emptyList }}'>{{ emptyList }}</div>
         {% endif %}
         {% if hiddenJSONSubclass %}
         <div class="hidden" id="hiddenJSONSubclass" value='{{hiddenJSONSubclass}}'>{{ hiddenJSONSubclass|tojson|safe}}</div>
         {% else %}
-        <div class="hidden" id="hiddenJSONSubclass" value='{{emptyList}}'>{{ emptyList|tojson|safe}}</div>
+        <div class="hidden" id="hiddenJSONSubclass" value='{{emptyList}}'>{{ emptyList}}</div>
         {% endif %}
         {% if userId %}
         <div class="hidden" id="userId" value='{{userId}}'>{{userId | tojson | safe }}</div>
