Changes webvowl button colors

--- a/OntoViewer/src/onto_app/templates/index.html
+++ b/OntoViewer/src/onto_app/templates/index.html
@@ -419,12 +419,12 @@
                     <tr>
                         <td>
                             <form action="/logout" method="get">
-                                <input type="submit" value="Logout" name="Logout" id="logout_btn" />
+                                <button type="submit" style="color:#fff!important;background-color:#795548!important;" id="logout_btn" name="Logout">Logout</button>
                             </form>
                         </td>
                         <td>
                             <form action="/user">
-                                <input type="submit" value="Dashboard" id="dashboard_btn" />
+                                <button type="submit" id="dashboard_btn" style="color:#fff!important;background-color:#795548!important;">Dashboard</button>
                             </form>
                         </td>
                     </tr>
